--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
     <h2 class="featurette-heading">Smithy <span class="text-muted">is easy to use.</span></h2>
     <p class="lead">Smithy uses modern flat styling to deliver a streamlined, uncomplicated experience.
-										Configuration is a point-and-click experience, and Smithy automatically detects
-										(and repairs) most common issues and mistakes.</p>
+										Configuration is point-and-click, and Smithy automatically detects
+										(and repairs) the majority of common issues and mistakes.</p>
   </div>
 
   <hr class="featurette-divider">
@@ -189,10 +189,10 @@
 	<div class="featurette">
 		<img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
 		<h2 class="featurette-heading">Smithy <span class="text-muted">is for Asset artists.</span></h2>
-		<p class="lead">Smithy Design Edition includes an additional tool built for Asset artists : The Smithy Reader Exporter
+		<p class="lead">Smithy Design Edition includes an additional tool built for Asset artists: The Smithy Reader Exporter
 										allows artists to export Unity Assets with built-in Smithy behavior, and come packaged with a Smithy
 										read-only version. You can now use the full generative power of Smithy with your assets, even if your
-										customers don't have the Smithy.<br> Create new Assets built on Smithy procedural generation, or,
+										customers don't have the Smithy Asset.<br> Create new Assets built on Smithy procedural generation, or,
 										update previous releases with Smithy functionality for additional Asset Store sales.</p>
 	</div>
   <!-- /END THE FEATURETTES -->
