--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@
 <br>
   <div class="row">
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="http://placehold.it/140x140">
+      <img class="img-rounded" src="http://placehold.it/140x140">
       <h2>Poweful</h2>
       <p>Use a handful of GameObjects and Materials to quickly create thousands of unique project assets, in-editor or at runtime.</p>
     </div>
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="http://placehold.it/140x140">
+      <img class="img-rounded" src="http://placehold.it/140x140">
       <h2>Flexible</h2>
       <p>Built around Unity's Component system, allowing for quick, simple, and seamless integration with existing projects.</p>
     </div>
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="http://placehold.it/140x140">
+      <img class="img-rounded" src="http://placehold.it/140x140">
       <h2>Simple</h2>
       <p>Employs modern UI/UX techniques for an easy-to-use, unobtrusive, frustration-free experience.</p>
     </div>
@@ -127,12 +127,12 @@
 	<!-- Three columns of text below the carousel -->
 <div class="row">
 	<div class="col-md-5 col-md-offset-1 text-center">
-		<img class="img-circle" src="http://placehold.it/140x140">
+		<img class="img-rounded" src="http://placehold.it/140x140">
 		<h2><span class="text-muted">for </span>Modern Developers</h2>
 		<p>Suitable for both dev-in-a-garage indies and large professional development teams.</p>
 	</div>
 	<div class="col-md-5 text-center">
-		<img class="img-circle" src="http://placehold.it/140x140">
+		<img class="img-rounded" src="http://placehold.it/140x140">
 		<h2><span class="text-muted">for </span>Asset Artists</h2>
 		<p>Create Assets with unparalleled versatility, or revitalize already-released content and reach new users.</p>
 	</div>
@@ -143,21 +143,21 @@
   <hr class="featurette-divider">
 
   <div class="featurette">
-    <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+    <img class="featurette-image img-rounded pull-right" src="http://placehold.it/512">
     <h2 class="featurette-heading">Smithy <span class="text-muted">is a force multiplier.</span></h2>
     <p class="lead">Smithy lets you go further with what you have. Assign <a href="#">tags</a>
 										and <a href="#">connection points</a> to GameObjects, and Smithy will automatically assemble
 										new object heirarchies, either in the Editor or at runtime. Object generation can be further
 										customized with selection weighting and Material selection options, and random seeds can
 										ensure consistent end-user experiences. <br> A few hours configuring Smithy <a href="#">Adapters</a>
-										can result in content that would have taken a team of artists and designers days or
+										can result in content that would have taken a team of artists days or
 										weeks to hand-make.</p>
   </div>
 
   <hr class="featurette-divider">
 
   <div class="featurette">
-    <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
+    <img class="featurette-image img-rounded pull-left" src="http://placehold.it/512">
     <h2 class="featurette-heading">Smithy <span class="text-muted">is made for your project.</span></h2>
     <p class="lead">Smithy is built around Unity's component system, and is completely content-agnostic. Games,
 										art installations, visualization tools, interactive exhibits, VR showcases - it's all good.<br>
@@ -167,7 +167,7 @@
   <hr class="featurette-divider">
 
   <div class="featurette">
-    <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+    <img class="featurette-image img-rounded pull-right" src="http://placehold.it/512">
     <h2 class="featurette-heading">Smithy <span class="text-muted">is easy to use.</span></h2>
     <p class="lead">Smithy uses modern flat styling to deliver a streamlined, uncomplicated experience.
 										Configuration is point-and-click, and Smithy automatically detects
@@ -177,7 +177,7 @@
   <hr class="featurette-divider">
 
 	<div class="featurette">
-    <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
+    <img class="featurette-image img-rounded pull-left" src="http://placehold.it/512">
     <h2 class="featurette-heading">Smithy <span class="text-muted">is for modern developers.</span></h2>
     <p class="lead">Modern development tools help developers create content with a minimum investment of time, money, and
 										frustration.<br>Smithy is no exception.<br>Flat styling, automatic error detection, and comprehensive
@@ -187,7 +187,7 @@
 	<hr class="featurette-divider">
 
 	<div class="featurette">
-		<img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
+		<img class="featurette-image img-rounded pull-right" src="http://placehold.it/512">
 		<h2 class="featurette-heading">Smithy <span class="text-muted">is for Asset artists.</span></h2>
 		<p class="lead">Smithy Design Edition includes an additional tool built for Asset artists: The Smithy Reader Exporter
 										allows artists to export Unity Assets with built-in Smithy behavior, and come packaged with a Smithy
